--- a/NEON_manuscript/Case studies/mvgam_case_study2.Rmd
+++ b/NEON_manuscript/Case studies/mvgam_case_study2.Rmd
@@ -36,7 +36,7 @@ par(mfrow = c(1,1))
 ```
 
 Clearly there are some correlations in the trends for these series. Now let's fit a well-specified model in which we estimate random intercepts, a shared seasonal cyclic smooth and `2` latent dynamic factors
-```{r}
+```{r, message=FALSE, warning=FALSE}
 mod1 <- mvjagam(data_train = dat$data_train,
                 data_test = dat$data_test,
                 formula = y ~ s(series, bs = 're') +
@@ -65,7 +65,7 @@ plot_mvgam_factors(mod1)
 ```
 
 Now we fit the same model but assume that we no nothing about how many factors to use, so we specify the maximum allowed (the total number of series; `8`). Note that this model is computationally more expensive so it will take longer to fit
-```{r}
+```{r, message=FALSE, warning=FALSE}
 mod2 <- mvjagam(data_train = dat$data_train,
                 data_test = dat$data_test,
                 formula = y ~ s(series, bs = 're') +
@@ -131,7 +131,7 @@ plot(series, legend.loc = 'topleft')
 ```
 
 Now we will fit an `mvgam` model with shared seasonality and random intercepts per series. Our first attempt will ignore any temporal component in the residuals so that we can identidy which GAM predictor combination gives us the best fit, prior to investigating how to deal with any remaining autocorrelation. We assume a Negative Binomial distrubution with shared overdispersion parameter for the response
-```{r}
+```{r, message=FALSE, warning=FALSE}
 trends_mod1 <- mvjagam(data_train = trends_data$data_train,
                       data_test = trends_data$data_test,
                       formula = y ~ s(series, bs = 're') + 
@@ -143,7 +143,7 @@ trends_mod1 <- mvjagam(data_train = trends_data$data_train,
 ```
 
 Given that these series could potentially be following a hierarchical seasonality, we will also trial a slghtly more complex model with an extra smoothing term per series that allows its seasonal curve to deviate from the global seasonal smooth. Ignore the warning about repeated smooths, as this is not an issue for estimation.
-```{r}
+```{r, message=FALSE, warning=FALSE}
 trends_mod2 <- mvjagam(data_train = trends_data$data_train,
                       data_test = trends_data$data_test,
                       formula = y ~ s(season, k = 12, m = 2, bs = 'cc') +
@@ -183,7 +183,7 @@ runjags::extract(trends_mod2$jags_model, 'dic')
 ```
 
 Model 2 seems to fit better so far, suggesting that hierarchical seasonality gives better performance for these series. But a problem with both of the above models is that their forecast uncertainties will not increase into the future, which is not how time series forecasts should behave. Here we fit Model 2 again but specifying a time series model for the latent trends. We assume the dynamic trends can be represented using latent factors that each follow an AR1 process, and we will rely on the exponential penalties to help regularise any un-needed factors by setting `n_lv = 4`
-```{r}
+```{r, message=FALSE, warning=FALSE}
 trends_mod3 <- mvjagam(data_train = trends_data$data_train,
                       data_test = trends_data$data_test,
                       formula = y ~ s(season, k = 12, m = 2, bs = 'cc') +
@@ -194,7 +194,7 @@ trends_mod3 <- mvjagam(data_train = trends_data$data_train,
                       n_lv = 4,
                       family = 'nb',
                       drift = T,
-                      n.burnin = 5000)
+                      burnin = 5000)
 ```
 
 
